--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
   </section>
 
   <section id="portfolio">
-    <!-- Portfolio content -->
+    <div class="container">
+      <h2>Portfolio</h2>
+      <p>Check out my portfolio below:</p>
+      <a href="portfolio.html" class="portfolio-btn">View Portfolio</a>
+    </div>
   </section>
 
   <section id="contact">
